[Downloads] Retain a BlobDataHandle in DownloadUrlParameters.

This allows a caller to extend the lifetime of a blob until the
downloads / resource loader subsystems take over. Without this, an
unfortunately timed revokeObjectURL() call from the originating page may
invalidate the URL before the download has a chance to start the
associated download request.

BUG=595305

Review URL: https://codereview.chromium.org/1829413002

Cr-Commit-Position: refs/heads/master@{#383370}

Former-commit-id: 6150c52a037d3b05eeac0faaf792ab0203b5580f